# bit-memory

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Readme.md  annotated.html  appveyor.yml  classes.html  dir_20af1ecb4c7dcdb385c19032862891d2.html  dir_3962a9877e7779f9033c6e3316daf8a0.html  dir_3c51975a1b6bdda3d0a5fef8ed60fa6e.html  dir_48a8ff6ec964ec28911619e36344187e.html  dir_4ba54f49bcb4228e4a6ed722f0589b33.html  dir_5536ebcaae762e381d4c8f7148f0f92e.html  dir_57a09288e6aa0a283ec680ff212c6d75.html  dir_57a685ede13de8a6d32cf4b54317a532.html  dir_5ae19fc6610990ff9b5d02b9c4e22fd1.html  dir_65918b2b40842937f69361532d6b9c89.html  dir_6a1b8493aed17206526577ee1504eb06.html  dir_724f7400ae908b3d20dcfe33fdf5f853.html  dir_8d785d49acbcaa23f2a7b2aaabf7c6c2.html  dir_911e2e3e6d3b64043b13d829b7a3782c.html  dir_9af8e6a8157e5d03a7b21462911c8b95.html  dir_bda0dd71d54ea9c0aabb79bc32b3db6b.html  dir_bdf8dc4c75307ad7cf8d10f3541ecd5e.html  dir_c42cad2b1960341164a1a6065b838ff1.html  dir_c85f68513d15d278a749e3757f961d95.html  dir_c8dea54601f60d5a4aef4c71965fa9ef.html  dir_c9daca2375650f465262f718fb88b2b6.html  dir_d415cf400248c9229950d9dde7775f5b.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e0f0d3aac014e29ee8049204b82f04ff.html  dir_f6c464a8afaab398c53ceac8d3a80279.html  dir_f9d5de476749646060fa734c8568c5a9.html  dir_fedd08977870c40803555e8254818154.html  files.html  functions.html  functions_0x7e.html  functions_b.html  (+44 more)
cmake/: README.md
cmake/modules/: AddDoxygenTarget.cmake  AddHeaderSelfContainmentTest.cmake  AddTestExecutable.cmake  CopyTarget.cmake  CopyTargetProperties.cmake  EnableCCache.cmake  EnableClangTidy.cmake  EnableIWYU.cmake  ExportLibrary.cmake  FindBit.cmake  FindCatch.cmake  FindGLFW.cmake  GitBuildInformation.cmake  GroupSourceTree.cmake  MakeVersionHeader.cmake  SetDefaultConfiguration.cmake
cmake/toolchains/: mingw64.clang.toolchain.cmake  mingw64.gcc.toolchain.cmake  msc.clang-cl.toolchain.cmake
d0/d17/: group___block_allocator.html
d0/d18/: classbit_1_1memory_1_1debug__bounds__checker-members.html
d0/d23/: classbit_1_1memory_1_1malloc__block__allocator.html
d0/d2c/: classbit_1_1memory_1_1freelist.html
d0/d43/: structbit_1_1memory_1_1block__allocator__has__next__block__size.html
d0/d4b/: streaming__pool__allocator_8hpp.html  streaming__pool__allocator_8hpp_source.html
d0/d50/: debugging_8hpp.html  debugging_8hpp_source.html
d0/d54/: structbit_1_1memory_1_1allocator__has__recommended__allocation__size.html
d0/d59/: classbit_1_1memory_1_1block__allocator__reference.html
d0/d7b/: structbit_1_1memory_1_1allocator__size__type.html
d0/d80/: detailed__leak__tracker_8hpp.html  detailed__leak__tracker_8hpp_source.html
d0/d8b/: classbit_1_1memory_1_1virtual__memory.html
d0/da4/: classbit_1_1memory_1_1growing__new__block__allocator-members.html
d0/da7/: quadratic__growth_8hpp_source.html
d0/dac/: classbit_1_1memory_1_1stateless__block__allocator__storage-members.html
d0/dc1/: classbit_1_1memory_1_1polymorphic__allocator__deleter-members.html
d0/dc7/: structbit_1_1memory_1_1allocator__pointer.html
d0/dcc/: virtual__block__allocator_8hpp.html  virtual__block__allocator_8hpp_source.html
d0/dcd/: _block_allocator_8hpp.html  _block_allocator_8hpp_source.html
d0/ddc/: stat__recording__tracker_8hpp.html  stat__recording__tracker_8hpp_source.html
d0/ddd/: classbit_1_1memory_1_1min__aligned__allocator-members.html
d0/df1/: classbit_1_1memory_1_1extended__allocator__traits-members.html
d1/d03/: structbit_1_1memory_1_1allocator__has__extended__allocate.html
d1/d05/: classbit_1_1memory_1_1memory__block__cache.html
d1/d16/: structbit_1_1memory_1_1allocator__has__destroy.html
d1/d48/: classbit_1_1memory_1_1polymorphic__allocator__deleter_3_01_t[]_00_01_allocator_storage_01_4.html
d1/d4d/: classbit_1_1memory_1_1shared__block__allocator__storage-members.html
d1/d60/: classbit_1_1memory_1_1allocator__deleter-members.html
d1/d71/: structbit_1_1memory_1_1block__allocator__has__info.html
d1/d7f/: classbit_1_1memory_1_1allocator__deleter.html
d1/d8f/: structbit_1_1memory_1_1stdout__tracker-members.html
d1/d90/: aligned__memory_8hpp.html  aligned__memory_8hpp_source.html
d1/d9b/: classbit_1_1memory_1_1malloc__block__allocator-members.html
d1/da3/: freelist_8hpp.html  freelist_8hpp_source.html
d1/dad/: growing__malloc__block__allocator_8hpp.html  growing__malloc__block__allocator_8hpp_source.html
d1/db1/: aligned__block__allocator_8hpp.html  aligned__block__allocator_8hpp_source.html
d1/db9/: classbit_1_1memory_1_1null__tagger-members.html
d1/dc9/: not__null_8hpp.html  (+1 more)
doc/: .gitignore  CMakeLists.txt  Doxyfile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enums_1.js  files_0.js  files_1.js  files_2.js  (+50 more)
test/: CMakeLists.txt  main.test.cpp
test/bit/memory/: endian.test.cpp  malloc_block_allocator.test.cpp  memory_block_cache.test.cpp  new_block_allocator.test.cpp  null_block_allocator.test.cpp  virtual_block_allocator.test.cpp
test/bit/memory/allocators/: allocator_reference.test.cpp  any_allocator.test.cpp
test/bit/memory/block_allocators/: aligned_block_allocator.test.cpp  any_block_allocator.test.cpp  block_allocator_reference.test.cpp  growing_aligned_block_allocator.test.cpp  growing_malloc_block_allocator.test.cpp  growing_new_block_allocator.test.cpp  growing_virtual_block_allocator.test.cpp  malloc_block_allocator.test.cpp  new_block_allocator.test.cpp  null_block_allocator.test.cpp  stack_block_allocator.test.cpp  static_block_allocator.test.cpp  thread_local_block_allocator.test.cpp  virtual_block_allocator.test.cpp
test/bit/memory/utilities/: endian.test.cpp  memory_block_cache.test.cpp
(+716 files in other folders)
